[gd_scene load_steps=7 format=3 uid="uid://dt4ypwah7ryjn"]

[ext_resource type="Script" path="res://scenes/maize.gd" id="1_3pnmt"]
[ext_resource type="Texture2D" uid="uid://bg4pstddv1m6a" path="res://graphics/maize.png" id="2_iupoc"]
[ext_resource type="Texture2D" uid="uid://bd8so3hnylm4b" path="res://graphics/health-back.png" id="3_fj3mt"]
[ext_resource type="Texture2D" uid="uid://gfa5wyo71535" path="res://graphics/health-over.png" id="4_ol66q"]
[ext_resource type="Texture2D" uid="uid://bt73bfc1f07cl" path="res://graphics/health-progress.png" id="5_8bq47"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl0lh"]
size = Vector2(31, 46)

[node name="Maize" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_3pnmt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iupoc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_yl0lh")

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GrowthTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 20.0
offset_top = -4.0
offset_right = 25.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_fj3mt")
texture_over = ExtResource("4_ol66q")
texture_progress = ExtResource("5_8bq47")
tint_progress = Color(0, 0.819023, 0.247507, 1)
metadata/_edit_use_anchors_ = true

[node name="Nbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 14.0
offset_top = -4.0
offset_right = 19.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_fj3mt")
texture_over = ExtResource("4_ol66q")
texture_progress = ExtResource("5_8bq47")
tint_progress = Color(0, 0.819023, 0.247507, 1)

[node name="Kbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 26.0
offset_top = -4.0
offset_right = 31.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_fj3mt")
texture_over = ExtResource("4_ol66q")
texture_progress = ExtResource("5_8bq47")
tint_progress = Color(0, 0.819023, 0.247507, 1)

[node name="Rbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 32.0
offset_top = -4.0
offset_right = 37.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_fj3mt")
texture_over = ExtResource("4_ol66q")
texture_progress = ExtResource("5_8bq47")
tint_progress = Color(0, 0.819023, 0.247507, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
